fix patient doc
